--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
         script: | 
           cd ~/absensi_mobile/himatif_web_admin_AM/
           docker-compose down
-          docker image rm app-web-absensi-mobile:1.0
+          docker image rm app-web-absensi-mobile:latest
           docker images
           git pull origin master
           git status
