--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,4 +27,4 @@ jobs:
           docker images
           git pull origin master
           git status
-          docker-compose up -d
+          docker-compose up -d --build
